objects/User.object
<CustomObject>
    <fields>
        <fullName>CRM_Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CRM Username</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Default_Collector_Location__c</fullName>
        <description>The default location / region for the collector.</description>
        <inlineHelpText>The default location / region for the collector.</inlineHelpText>
        <label>Default Collector Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Service_Manager__c</fullName>
        <description>Field used for chatter notifications when a service appointment is marked for SGI</description>
        <label>Field Service Manager</label>
        <relationshipName>Field_Service_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Processing_Location__c</fullName>
        <description>Used for Cash Logistics - When an Route schedule is created, it is assigned to a processing location. This is used to determine, when a user of profile CL - Route Processor logs in, what route schedules they see.</description>
        <inlineHelpText>Used for Cash Logistics - When an Route schedule is created, it is assigned to a processing location. This is used to determine, when a user of profile CL - Route Processor logs in, what route schedules they see.</inlineHelpText>
        <label>Processing Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <label>Reports To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Manager__c</fullName>
        <inlineHelpText>This field is used for aiding in identifying a user&apos;s team on dashboards within Salesforce, and may be different from the manager reflected in ADP.</inlineHelpText>
        <label>Salesforce Manager</label>
        <relationshipName>TeamMember</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Selected_Machine_Record_Type__c</fullName>
        <description>Used for Cash Logistics</description>
        <inlineHelpText>Used for Cash Logistics</inlineHelpText>
        <label>Selected Machine Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VGT</fullName>
                </value>
                <value>
                    <fullName>Redemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Keys__c</fullName>
        <label>Service Keys</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chicagoland</fullName>
                </value>
                <value>
                    <fullName>La Salle</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Watseka</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Northwest - Rich &amp; Junnies</fullName>
                </value>
                <value>
                    <fullName>Northwest - Rockford</fullName>
                </value>
                <value>
                    <fullName>South - Group #1 (North)</fullName>
                </value>
                <value>
                    <fullName>South - Group #2 (EQS Amusement)</fullName>
                </value>
                <value>
                    <fullName>South - Group #3 (Randy&apos;s Vending)</fullName>
                </value>
                <value>
                    <fullName>South - Group #4 (D &amp; S Vending)</fullName>
                </value>
                <value>
                    <fullName>South - Group #5 (East)</fullName>
                </value>
                <value>
                    <fullName>South - Group #6 (Olney/Oblong)</fullName>
                </value>
                <value>
                    <fullName>South - Group #7 (GMS)</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Chicagoland 1</fullName>
                </value>
                <value>
                    <fullName>Chicagoland 2</fullName>
                </value>
                <value>
                    <fullName>Chicagoland 3</fullName>
                </value>
                <value>
                    <fullName>Chicagoland 4</fullName>
                </value>
                <value>
                    <fullName>Chicagoland 5</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Advanced</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Fair Share</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Shamrock</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Vinnie</fullName>
                </value>
                <value>
                    <fullName>East - Champaign</fullName>
                </value>
                <value>
                    <fullName>East - Watseka</fullName>
                </value>
                <value>
                    <fullName>Lemont Thursday: Berwyn</fullName>
                </value>
                <value>
                    <fullName>Northwest - LaSalle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Manager_Id__c</fullName>
        <formula>Manager.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AllowMapsExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Maps Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maps Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLatitude__c</fullName>
        <label>Maps Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLongitude__c</fullName>
        <label>Maps Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultType__c</fullName>
        <label>DefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DefaultZoomLevel__c</fullName>
        <label>Maps Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <formula>&quot;MALiveAvail-&quot; + LEFT($Organization.Id, 15) + &quot;-&quot; + LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceVendor__c</fullName>
        <formula>&quot;MapAnything&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EditMapsOrgWideQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Maps Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FinishedAdvRouteSetup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Maps Advanced Route Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapsSetting__c</fullName>
        <label>Map Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MaxExportSize__c</fullName>
        <label>Maps Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySize__c</fullName>
        <label>Maps Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPPublisher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Publisher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>maps__Version__c</fullName>
        <label>Maps Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Accel_Lead_Route_Technicians</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Accel Lead Route Tech</value>
        </filters>
        <label>Accel Lead Route Techs</label>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users (Includes Portal Users)</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users (Includes Inactive Users)</label>
    </listViews>
    <listViews>
        <fullName>Admin_Users_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_BY_ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users (Active Users)</label>
    </listViews>
    <listViews>
        <fullName>Cash_Logistics_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Default_Collector_Location__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.CELL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CL - Route Collector</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CL Route Collectors</label>
    </listViews>
    <listViews>
        <fullName>Community_Users</fullName>
        <booleanFilter>(1 OR 2) AND 3 and 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Individual User Community Standard</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Grouped User Community Standard</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>accelentertainment</value>
        </filters>
        <label>Community Portal Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Critical_Update_Permission_Set_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Community</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Critical Update PS Custom Settings Add</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Last_Login</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>12/31/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <label>Last Login</label>
    </listViews>
    <listViews>
        <fullName>Lead_Route_Tech</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Lead Route Tech</value>
        </filters>
        <label>Lead Route Tech</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>